--- a/src/app/layout/titlebar/titlebar.component.html
+++ b/src/app/layout/titlebar/titlebar.component.html
@@ -71,7 +71,7 @@
         <mat-icon svgIcon="remove" aria-hidden="true"></mat-icon>
       </button>
       <button mat-icon-button (click)="maximizeWindow()" aria-label="Maximize window">
-        <mat-icon svgIcon="check_box" aria-hidden="true"></mat-icon>
+        <mat-icon svgIcon="check-box" aria-hidden="true"></mat-icon>
       </button>
       <button
         mat-icon-button
