--- a/src/app/shared/overviews-shared/remotes-panel/remotes-panel.component.html
+++ b/src/app/shared/overviews-shared/remotes-panel/remotes-panel.component.html
@@ -29,6 +29,11 @@
           (copyAction)="onCopyAction($event)"
           (stopSyncAction)="onStopSyncAction($event)"
           (stopCopyAction)="onStopCopyAction($event)"
+          (moveAction)="onMoveAction($event)"
+          (bisyncAction)="onBisyncAction($event)"
+          (stopMoveAction)="onStopMoveAction($event)"
+          (stopBisyncAction)="onStopBisyncAction($event)"
+          (configurePrimaryActions)="onConfigurePrimaryActions($event)"
         ></app-remote-card>
       }
     </div>
